# acoustic-modems

./: .coverage  .gitignore  AGENTS.md  Makefile  PROPOSAL.md  README.md  pyproject.toml  sitecustomize.py
PySide6/: __init__.py
docs/: ARCHITECTURE.md
modems/bfsk/: README.md  __init__.py  defaults.json  metadata.json  schema.json  schema.py
modems/template/: README.md  __init__.py  defaults.json  schema.json  schema.py
scripts/: update_vectors.py
src/amw/: __init__.py
src/amw/gui/: __init__.py  __main__.py  _qt.py  app.py  controller.py  main_window.py
src/amw/gui/panels/: __init__.py  audio_panel.py  debug_panel.py  modem_panel.py  payload_panel.py  pipeline_panel.py
src/amw/io/: __init__.py  audio.py  payload.py  payload_inspector.py
src/amw/pipeline/: __init__.py  artifacts.py  conditioner.py  fec.py  orchestrator.py
src/amw/plugins/: __init__.py  contract.py  registry.py  schema.py
tests/: __init__.py  _qt_stub.py  conftest.py
tests/gui/: test_app.py  test_controller.py  test_main_window.py  test_panels.py
tests/integration/: test_loopback.py
tests/io/: test_audio_service.py  test_io_package.py  test_payload_builder.py  test_payload_inspector.py
tests/modems/: test_bfsk_fec.py
tests/pipeline/: test_conditioner.py  test_fec.py  test_orchestrator.py  test_package.py
tests/plugins/: test_registry.py  test_schema_utils.py
